Changed HPCC example files to use comma-separated modules rather than a separate use statement per line.  Put all standard modules in one use statement and all user modules in a second.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10043 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/hpcc06/README
+++ b/test/release/examples/hpcc06/README
@@ -99,3 +99,6 @@ Other changes to date are:
     argument rather than two integers.  This makes good use of
     Chapel's range concept and requires the need to break the block
     parameter apart at the callsite.
+
+  * changed the module "use" statements to use comma-separated lists
+    of modules rather than a separate use statement per module.
