--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -11,6 +11,7 @@ This directory contains the following example codes:
      iterators.chpl         : sample iterators
      jacobi.chpl            : Jacobi iteration
      norm.chpl              : sample module for computing array norms
+     parallelQuickSort.chpl : parallel quick sort using cobegin and serial
      prod-cons.chpl         : producer-consumer using a sync variable
      tree_construct.chpl    : construct and walk a tree in parallel
 
