--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -5,6 +5,7 @@ Chapel Examples Directory and Testing System
 This directory contains the following example codes:
 
      beer.chpl              : computes lyrics to "99 bottles of beer"
+     blockLU.chpl           : block LU factorization
      genericStack.chpl      : a generic stack class (linked list implementation)
      genericStack2.chpl     : another generic stack class (array implementation)
      hello.chpl             : "Hello, world!" program using a config variable
