--- a/spec/Iterators.tex
+++ b/spec/Iterators.tex
@@ -10,7 +10,7 @@ iterators if they implement a structural iterator interface.
 \label{Iterator_Functions}
 \index{iterator@\chpl{iterator}}
 
-The syntax of a function declaration is identical to that of a
+The syntax of an iterator declaration is identical to that of a
 function declaration except that the keyword \chpl{def} is replaced
 with the keyword \chpl{iterator}.  The body of the iterator may
 include yield statements alongside return statements.  When a yield is
