Updated classes, records, and iterators section, mostly removing references to sequences.  Iterators now are said to return 1D arrays.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10138 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Classes.tex
+++ b/spec/Classes.tex
@@ -347,11 +347,10 @@ different way in the future.
 \label{Nested_Classes}
 \index{classes!nested}
 
-\begin{status}
-Nested classes are not yet supported.
-\end{status}
-
 A class defined within another class is a nested class.
+
+Nested classes can refer to fields and methods in the outer class
+implicitly or explicitly with an \chpl{outer} reference.
 
 \subsection{Automatic Memory Management}
 \label{Automatic_Memory_Management}
